2023-09-26T16:23:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6315545778 # 810
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-26
* notice: last 14d: unq all: 1 19
* notice: prev accum: outdated-unq outdated-all / unq all: 242 508 / 251 526
* notice: next accum: outdated-unq outdated-all / unq all: 242 508 / 251 527
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-09-26]

2023-09-26T01:16:31Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6306802430 # 808
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-26
* notice: last 14d: unq all: 1 18
* notice: prev accum: outdated-unq outdated-all / unq all: 242 508 / 250 525
* notice: next accum: outdated-unq outdated-all / unq all: 242 508 / 251 526
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-09-26]

2023-09-25T16:23:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6302111284 # 807
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-25
* notice: last 14d: unq all: 1 17
* notice: prev accum: outdated-unq outdated-all / unq all: 242 508 / 250 524
* notice: next accum: outdated-unq outdated-all / unq all: 242 508 / 250 525
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [] / [2023-09-25]

2023-09-25T08:23:08Z: