@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-09-26T16:23:26Z",
+  "timestamp" : "2023-09-27T01:16:24Z",
   "count_outdated" : 508,
   "uniques_outdated" : 242,
-  "count" : 527,
+  "count" : 528,
   "uniques" : 251,
   "clones" : [
     {
@@ -79,9 +79,9 @@
     },
     {
       "timestamp": "2023-09-26T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
