@@ -1,5 +1,5 @@
 {
-  "count": 19,
+  "count": 20,
   "uniques": 1,
   "clones": [
     {
@@ -44,7 +44,7 @@
     },
     {
       "timestamp": "2023-09-26T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 1
     }
   ]
