@@ -1,3 +1,12 @@
+2023-09-27T01:16:24Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6320155564 # 811
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-27
+* notice: last 14d: unq all: 1 20
+* notice: prev accum: outdated-unq outdated-all / unq all: 242 508 / 251 527
+* notice: next accum: outdated-unq outdated-all / unq all: 242 508 / 251 528
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +3 -0 -0 / 1 3
+* notice: removed / changed dates: [] / [2023-09-26]
+
 2023-09-26T16:23:26Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6315545778 # 810
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-26
